--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "firebase": "^9.2.0",
+    "formik": "^2.2.9",
     "i18n": "^0.13.3",
     "i18next": "^21.3.3",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -23,6 +25,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
