--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-i18next": "^11.12.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
