--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "aws-sdk": "^2.1048.0",
     "axios": "^0.24.0",
     "firebase": "^9.2.0",
     "formik": "^2.2.9",
