--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-i18next": "^11.12.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
