--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@uppy/aws-s3": "^2.0.7",
+    "@uppy/core": "^2.1.4",
+    "@uppy/react": "^2.1.2",
     "aws-sdk": "^2.1048.0",
     "axios": "^0.24.0",
     "firebase": "^9.2.0",
